# move3d-studio

./: .gitignore  CMakeLists.txt  README.md  move3d-qt-studio.files  move3d-qt-studio.includes
script/: mysocket.py
script/CMake/: FindEIGEN.cmake  FindGBM.cmake  FindMOVE3D-CORE.cmake  FindMOVE3D-MOTIONPLANNER.cmake  FindMOVE3D-PLANNERS.cmake  FindMOVE3D-QTGUI.cmake  FindQWT.cmake  FindSOFTMOTION.cmake  FindXFORMS.cmake
src/: CMakeLists.txt  move3d.cpp
src/move3d-qt/: CMakeLists.txt  main.cpp  main.hpp  move3d.c
src/move3d-qt-gui-libs/: CMakeLists.txt
src/move3d-qt-gui-libs/pkgconfig/: CMakeLists.txt  move3d-qt-gui-libs.pc.cmake
src/move3d-qt-gui-libs/src/: SourceList.cmake  glutWindow.cpp  move3d.c  planner_handler.cpp  planner_handler.hpp  pocolibsPoster.cpp  pocolibsPoster.hpp  qtLibrary.hpp
src/move3d-qt-gui-libs/src/qtBase/: SpinBoxSliderConnector_p.cpp  SpinBoxSliderConnector_p.hpp  qtBaseWindow.cpp  qtBaseWindow.hpp  qt_widgets.cpp  qt_widgets.hpp
src/move3d-qt-gui-libs/src/qtFormRobot/: SourceList.cmake  moverobot.cpp  moverobot.hpp  moverobot.ui  qtConstraints.cpp  qtConstraints.hpp  qtMultiLocalPath.cpp  qtMultiLocalPath.hpp  qtmovinghuman.cpp  qtmovinghuman.hpp  qtmovinghuman.ui  sliderfunction.cpp  sliderfunction.hpp  ui_moverobot.h  ui_moverobot.hpp
src/move3d-qt-gui-libs/src/qtMainInterface/: #SourceList.cmake#  SourceList.cmake  guiparams.cpp  guiparams.hpp  kcdpropertieswindow.cpp  kcdpropertieswindow.hpp  kcdpropertieswindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindowGenerated.hpp  mainwindowTestFunctions.cpp  mainwindowTestFunctions.hpp  settings.cpp  settings.hpp
src/move3d-qt-gui-libs/src/qtMainInterface/sideWidgets/: SourceList.cmake  qtCost.cpp  qtCost.hpp  qtCost.ui  qtDistanceField.cpp  qtDistanceField.hpp  qtDistanceField.ui  qtGraspPlanner.cpp  qtGraspPlanner.hpp  qtGraspPlanner.ui  qtHriGesture.cpp  qtHriGesture.hpp  qtHriGesture.ui  qtHrics.cpp  qtHrics.hpp  qtHrics.ui  qtMotionPlanner.cpp  qtMotionPlanner.hpp  qtMotionPlanner.ui  qtNatural.cpp  qtNatural.hpp  qtNatural.ui  qtOtp.cpp  qtOtp.hpp  qtOtp.ui  qtRRTStar.cpp  qtRRTStar.hpp  qtRRTStar.ui  qtReplanning.cpp  qtReplanning.hpp  qtReplanning.ui  qtRobot.cpp  qtRobot.hpp  qtRobot.ui  qtTrajectorySampling.cpp  qtTrajectorySampling.hpp  qtTrajectorySampling.ui  qtUtil.cpp  qtUtil.hpp  qtUtil.ui  (+3 more)
src/move3d-qt-gui-libs/src/qtOpenGL/: glwidget.cpp  glwidget.hpp  qtGLWindow.cpp  qtGLWindow.hpp  qtMobileCamera.cpp  qtopenglviewer.cpp  qtopenglviewer.hpp
src/move3d-qt-gui-libs/src/qtPlot/: SourceList.cmake  basicPlot.cpp  basicPlot.hpp  basicPlotWindow.cpp  basicPlotWindow.hpp  dataPlot.cpp  dataPlot.hpp  doublePlot.cpp  doublePlot.hpp  histoWin.cpp  histoWin.hpp  histogramItem.cpp  histogramItem.hpp  multiPlot.cpp  multiPlot.hpp  replottingVectors.cpp  replottingVectors.hpp  tempWin.cpp  tempWin.hpp  ui_BasicPlotWindow.hpp
src/move3d-qt-gui-libs/src/utils/: MultiRun.cpp  MultiRun.hpp  PlanningThread.hpp  SaveContext.cpp  SaveContext.hpp  SourceList.cmake  testModel.cpp  testModel.hpp
src/move3d-remote/: CMakeLists.txt  attentionalwidget.cpp  attentionalwidget.hpp  attentionalwidget.ui  camerasolo.cpp  camerasolo.hpp  camerasolo.ui  camerawidget.cpp  camerawidget.h  camerawidget.ui  dockwidget.cpp  dockwidget.hpp  dockwidget.ui  duplicatedGenomStruct.hpp  environmentStruct.h  genomimageposter.cpp  genomimageposter.hpp  genomposter.cpp  genomposter.hpp  main-remote.cpp  main-remote.hpp  mainwindow-remote.cpp  mainwindow-remote.hpp  mainwindow-remote.ui  move3d-remote.files  move3d.c  myimg.png.h  myopencv.cpp  myopencv.hpp  niutwidget.cpp  niutwidget.h  niutwidget.ui  paramwidget.cpp  paramwidget.hpp  paramwidget.ui  picowebimage.cpp  picowebimage.hpp  pocolibsPoster.cpp  pocolibsPoster.hpp  posterreader.cpp  (+13 more)
src/move3d-remote/images/: HOWTO  green-man-xpm.h  im_still_alive-xpm.h  jimmy-xpm.h  orange-man-xpm.h  red-man-xpm.h  rip-xpm.h  rip.xpm  yellow-death-xpm.h  yellow-man-xpm.h
src/move3d-xforms/: CMakeLists.txt  FORM_bio_collision.cpp  FORMconstraints.cpp  FORMdiffusion.cpp  FORMenv.cpp  FORMfilter.cpp  FORMgenom.cpp  FORMgraspPlanning.cpp  FORMmain.cpp  FORMmobcam.cpp  FORMmultiLocalPath.cpp  FORMoptim.cpp  FORMpath_deform.cpp  FORMplanner.cpp  FORMrobot.cpp  FORMrrt.cpp  FORMsoftMotion.cpp  FORMsteering.cpp  FORMuser_appli.cpp  g3d_draw_ui.cpp  g3d_draw_ui.h  g3d_window.cpp  g3d_window.h  move3d.cpp  user_appli.cpp
src/move3d-xforms/hri-gui/: CMakeLists.txt  FORM_HRI_affordance.cpp  FORM_HRI_affordance_proto.h  FORMgikjointselection.cpp  FORMgikjointselection_proto.h  FORMhri_planner.cpp  FORMhri_planner_proto.h  FORMpsp_parameters.cpp  FORMpsp_parameters_proto.h  hri_wave_exp.cpp  hri_wave_exp_proto.h  p3d_perspective.cpp  p3d_perspective_proto.h  perspective.h
src/move3d-xforms/hri-gui/graphic/: g3d_draw_camera.cpp  g3d_draw_camera_proto.h  g3d_draw_navigation.cpp  g3d_draw_navigation_proto.h  g3d_perspective_window.cpp  g3d_perspective_window_proto.h  g3d_position_area.cpp  g3d_position_area_proto.h  hri_graphic_proto.h
src/move3d-xforms/proto/: FORM_bio_collision_proto.h  FORMconstraints_proto.h  FORMdiffusion_proto.h  FORMenv_proto.h  FORMfilter_proto.h  FORMgenom_proto.h  FORMmain_proto.h  FORMmobcam_proto.h  FORMmultiLocalPath_proto.h  FORMoptim_proto.h  FORMpath_deform_proto.h  FORMplanner_proto.h  FORMrobot_proto.h  FORMrrt_proto.h  FORMsoftMotion_proto.h  FORMsteering_proto.h  FORMuser_appli_proto.h  FormgraspPlanning_proto.h  move3d_proto.h  userappli_proto.h
