
IF(WITH_XFORMS)
	ADD_SUBDIRECTORY(move3d-xforms)
ENDIF()

ADD_EXECUTABLE(move3d-studio move3d.cpp ${INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(move3d-studio ${COMPONENTS} ${LIBS})

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX "${MOVE3DSTUDIO_BINARY_DIR}/install" CACHE PATH "move3d-studio install prefix" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

INSTALL(TARGETS move3d-studio
        RUNTIME DESTINATION bin 
		CONFIGURATIONS ${CMAKE_BUILD_TYPE})
		
